[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homaker"
version = "0.1.0"
description = "Tool to convert worksheets to handouts by merging pages"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pymupdf>=1.24.11"]
[project.scripts]
homaker = "homaker.main:main"
